# employees-app

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  TZ.txt  docker-compose.dev.yml  docker-compose.yml  employees.json  pyproject.toml  start_server.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: employee.py  load_data.py  user.py
app/core/: config.py
app/crud/: employee.py  user.py
app/database/: database.py
app/model/: employee.py  user.py
app/utils/: serializer_search.py
tests/: conftest.py  test_api.py
