[tool.poetry]
name = "users-app"
version = "0.1.0"
description = ""
authors = ["Hazzari <free2mmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.2"
uvicorn = "^0.16.0"
environs = "^9.3.5"
odmantic = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.21.1"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
